Fix overflowing text in BarsMenu

--- a/src/components/BarsMenu.css
+++ b/src/components/BarsMenu.css
@@ -4,6 +4,7 @@
     background-color: var(--first-Color);
     position: absolute;
     top: var(--header-height);
+    overflow: hidden;
     right: 0;
     max-height: 100vh;
     transition: max-height 0.5s;
@@ -11,15 +12,17 @@
 .closedMenu{
     max-height: 0;
 }
-
+.openedMenu{
+    max-height: 100vh;
+}
 .barsMenu-container > ul{
     list-style-type: none;
     padding: 0;
-    /* width: 80%; */
+    max-height: 100%;
 }
 .barsMenu-container li{
     font-size: 0.7em;
-    font-weight: 300;
+    font-weight: 400;
     padding: 10px 0;
     width: 100%;
     cursor: pointer;
